@@ -17,93 +17,17 @@
 package org.qubership.integration.platform.runtime.catalog.service.parsers.impl;
 
 import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import io.swagger.v3.core.util.Json;
-import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
-import org.qubership.integration.platform.runtime.catalog.RuntimeCatalogApplicationRunner;
-import org.qubership.integration.platform.runtime.catalog.model.system.IntegrationSystemType;
-import org.qubership.integration.platform.runtime.catalog.persistence.configs.entity.system.Environment;
-import org.qubership.integration.platform.runtime.catalog.persistence.configs.entity.system.IntegrationSystem;
 import org.qubership.integration.platform.runtime.catalog.persistence.configs.entity.system.Operation;
-import org.qubership.integration.platform.runtime.catalog.persistence.configs.entity.system.SpecificationGroup;
-import org.qubership.integration.platform.runtime.catalog.persistence.configs.entity.system.SpecificationSource;
 import org.qubership.integration.platform.runtime.catalog.persistence.configs.entity.system.SystemModel;
-import org.qubership.integration.platform.runtime.catalog.persistence.configs.repository.system.SystemModelRepository;
-import org.qubership.integration.platform.runtime.catalog.service.EnvironmentBaseService;
-import org.qubership.integration.platform.runtime.catalog.service.parsers.ParserUtils;
-import org.qubership.integration.platform.runtime.catalog.service.resolvers.swagger.SwaggerSchemaResolver;
-import org.qubership.integration.platform.runtime.catalog.service.schemas.SchemaProcessor;
-import org.qubership.integration.platform.runtime.catalog.service.schemas.impl.ArraySchemaProcessor;
-import org.qubership.integration.platform.runtime.catalog.service.schemas.impl.DefaultSchemaProcessor;
-import org.qubership.integration.platform.runtime.catalog.service.schemas.impl.FileSchemaProcessor;
-import org.qubership.integration.platform.runtime.catalog.service.schemas.impl.ObjectSchemaProcessor;
-import org.qubership.integration.platform.runtime.catalog.service.schemas.impl.StringSchemaProcessor;
-import org.qubership.integration.platform.runtime.catalog.service.schemas.impl.UUIDSchemaProcessor;
-
-import java.util.ArrayList;
-import java.util.HashSet;
-import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.when;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
-@ExtendWith(MockitoExtension.class)
-class SwaggerSpecificationParser31Test {
-
-    @Mock private SystemModelRepository systemModelRepository;
-    @Mock private ParserUtils parserUtils;
-    @Mock private EnvironmentBaseService environmentBaseService;
-
-    private SwaggerSpecificationParser parser;
-
-    @BeforeAll
-    static void ensureBindTypeIsSet() throws ClassNotFoundException {
-        // RuntimeCatalogApplicationRunner's static initializer sets bind-type=true so
-        // io.swagger.v3.oas.models.media.Schema#getType() falls back to `types` when
-        // parsing OpenAPI 3.1. Force class initialization and assert the side effect
-        // — if someone removes the static block, this test fails loudly.
-        Class.forName(RuntimeCatalogApplicationRunner.class.getName());
-        assertEquals("true", System.getProperty("bind-type"));
-    }
-
-    @BeforeEach
-    void setUp() {
-        ObjectMapper mapper = Json.mapper();
-        SwaggerSchemaResolver resolver = new SwaggerSchemaResolver();
-
-        List<SchemaProcessor> leafProcessors = List.of(
-                new DefaultSchemaProcessor(mapper),
-                new ObjectSchemaProcessor(mapper),
-                new StringSchemaProcessor(mapper),
-                new UUIDSchemaProcessor(mapper),
-                new FileSchemaProcessor(mapper)
-        );
-        ArraySchemaProcessor arrayProcessor = new ArraySchemaProcessor(leafProcessors, mapper);
-        List<SchemaProcessor> allProcessors = new ArrayList<>(leafProcessors);
-        allProcessors.add(arrayProcessor);
-
-        when(systemModelRepository.save(any(SystemModel.class))).thenAnswer(inv -> inv.getArgument(0));
-        when(parserUtils.defineVersionName(any(), any())).thenReturn("1.0.0");
-        when(parserUtils.defineVersion(any(), any())).thenReturn("1.0.0");
-
-        parser = new SwaggerSpecificationParser(
-                systemModelRepository,
-                resolver,
-                allProcessors,
-                mapper,
-                parserUtils,
-                environmentBaseService
-        );
-    }
+class SwaggerSpecificationParser31Test extends AbstractSwaggerSpecificationParserTest {
 
     @Test
     @DisplayName("OpenAPI 3.1: `type` is preserved on properties and $ref is inlined into definitions")
@@ -163,33 +87,17 @@ class SwaggerSpecificationParser31Test {
                 }
                 """;
 
-        // IMPLEMENTED type + one environment is enough to keep
-        // resolverSwaggerEnvironment() happy when swagger-parser injects a default server.
-        Environment env = new Environment();
-        env.setId("env-id");
-        IntegrationSystem system = new IntegrationSystem("sys-id");
-        system.setIntegrationSystemType(IntegrationSystemType.IMPLEMENTED);
-        system.addEnvironment(env);
-
-        SpecificationGroup group = SpecificationGroup.builder().name("grp").build();
-        group.setId("grp-id");
-        group.setSystem(system);
-
-        SpecificationSource source = new SpecificationSource();
-        source.setSource(spec);
-
-        SystemModel model = parser.enrichSpecificationGroup(
-                group, List.of(source), new HashSet<>(), false, msg -> { });
+        SystemModel model = parse(spec);
 
         assertNotNull(model);
         assertEquals(1, model.getOperations().size());
 
-        Operation op = model.getOperations().get(0);
+        Operation op = model.getOperations().getFirst();
 
         JsonNode requestSchema = op.getRequestSchema().get("application/json");
         assertNotNull(requestSchema, "request schema for application/json is missing");
 
-        // 1. `type` survives on primitive properties — the bind-type fix's main effect.
+        // 1. `type` survives on primitive properties.
         //    (The top-level ThingRequest schema has no `type` in source; that's valid 3.1
         //    where the shape is implied by `properties`. We're checking leaf types.)
         assertEquals("string", requestSchema.at("/properties/name/type").asText());
@@ -207,5 +115,184 @@ class SwaggerSpecificationParser31Test {
         JsonNode responseSchema = op.getResponseSchemas().get("200").get("application/json");
         assertNotNull(responseSchema, "response schema for 200/application/json is missing");
         assertEquals("string", responseSchema.at("/properties/id/type").asText());
+    }
+
+    @Test
+    @DisplayName("OpenAPI 3.1: JSON Schema 2020-12 keywords (const, numeric exclusiveMinimum) survive import")
+    void openApi31PreservesJsonSchemaKeywords() {
+        String spec = """
+                {
+                  "openapi": "3.1.0",
+                  "info": {"title": "Test", "version": "1.0.0"},
+                  "paths": {
+                    "/money": {
+                      "post": {
+                        "operationId": "createMoney",
+                        "requestBody": {
+                          "content": {
+                            "application/json": {
+                              "schema": {"$ref": "#/components/schemas/Money"}
+                            }
+                          }
+                        },
+                        "responses": {"200": {"description": "OK"}}
+                      }
+                    }
+                  },
+                  "components": {
+                    "schemas": {
+                      "Money": {
+                        "properties": {
+                          "amount": {"type": "number", "exclusiveMinimum": 0},
+                          "currency": {"const": "USD"}
+                        }
+                      }
+                    }
+                  }
+                }
+                """;
+
+        SystemModel model = parse(spec);
+
+        assertNotNull(model);
+        Operation op = model.getOperations().getFirst();
+        JsonNode requestSchema = op.getRequestSchema().get("application/json");
+        assertNotNull(requestSchema, "request schema for application/json is missing");
+
+        // 3.1 keeps exclusiveMinimum as a number, not the 3.0 boolean.
+        JsonNode exclusiveMinimum = requestSchema.at("/properties/amount/exclusiveMinimum");
+        assertFalse(exclusiveMinimum.isMissingNode(), "exclusiveMinimum must survive import");
+        assertEquals(0, exclusiveMinimum.asInt());
+
+        // const replaces a single-element enum in 3.1.
+        assertEquals("USD", requestSchema.at("/properties/currency/const").asText());
+    }
+
+    @Test
+    @DisplayName("OpenAPI 3.1: a top-level array response inlines its item $ref into definitions")
+    void openApi31TopLevelArrayResponseInlinesItemRef() {
+        String spec = """
+                {
+                  "openapi": "3.1.0",
+                  "info": {"title": "Test", "version": "1.0.0"},
+                  "paths": {
+                    "/pets": {
+                      "get": {
+                        "operationId": "listPets",
+                        "responses": {
+                          "200": {
+                            "description": "OK",
+                            "content": {
+                              "application/json": {
+                                "schema": {"$ref": "#/components/schemas/Pets"}
+                              }
+                            }
+                          }
+                        }
+                      }
+                    }
+                  },
+                  "components": {
+                    "schemas": {
+                      "Pet": {
+                        "type": "object",
+                        "required": ["id", "name"],
+                        "properties": {
+                          "id": {"type": "integer", "format": "int64"},
+                          "name": {"type": "string"},
+                          "tag": {"type": "string"}
+                        }
+                      },
+                      "Pets": {
+                        "type": "array",
+                        "items": {"$ref": "#/components/schemas/Pet"}
+                      }
+                    }
+                  }
+                }
+                """;
+
+        SystemModel model = parse(spec);
+
+        assertNotNull(model);
+        Operation op = model.getOperations().getFirst();
+        JsonNode responseSchema = op.getResponseSchemas().get("200").get("application/json");
+        assertNotNull(responseSchema, "response schema for 200/application/json is missing");
+
+        // The array keeps its shape and must NOT pick up a spurious top-level $ref.
+        assertEquals("array", responseSchema.at("/type").asText());
+        assertTrue(responseSchema.at("/$ref").isMissingNode(), "array schema must not get a spurious $ref");
+        assertEquals("#/definitions/Pet", responseSchema.at("/items/$ref").asText());
+
+        // The item component is inlined as the real object, not a copy of the array node.
+        JsonNode petDef = responseSchema.at("/definitions/Pet");
+        assertFalse(petDef.isMissingNode(), "Pet must be inlined into definitions");
+        assertEquals("object", petDef.at("/type").asText());
+        assertEquals("string", petDef.at("/properties/name/type").asText());
+        assertTrue(petDef.at("/$ref").isMissingNode(), "inlined Pet must not be the self-referential array node");
+    }
+
+    @Test
+    @DisplayName("OpenAPI 3.1: boolean schemas (items: false) do not break sibling $ref resolution")
+    void openApi31BooleanSchemasDoNotBreakRefResolution() {
+        // `items: false` is a JSON Schema 2020-12 boolean schema, valid in 3.1 (e.g. closing a
+        // prefixItems tuple). The resolver must skip it as a non-ref node rather than fail.
+        String spec = """
+                {
+                  "openapi": "3.1.0",
+                  "info": {"title": "Test", "version": "1.0.0"},
+                  "paths": {
+                    "/images": {
+                      "post": {
+                        "operationId": "createImage",
+                        "requestBody": {
+                          "content": {
+                            "application/json": {
+                              "schema": {"$ref": "#/components/schemas/Image"}
+                            }
+                          }
+                        },
+                        "responses": {"200": {"description": "OK"}}
+                      }
+                    }
+                  },
+                  "components": {
+                    "schemas": {
+                      "Image": {
+                        "type": "object",
+                        "properties": {
+                          "tag": {"$ref": "#/components/schemas/Tag"},
+                          "aspectRatio": {
+                            "type": "array",
+                            "prefixItems": [{"type": "integer"}, {"type": "integer"}],
+                            "items": false
+                          }
+                        },
+                        "additionalProperties": false
+                      },
+                      "Tag": {
+                        "type": "object",
+                        "properties": {"name": {"type": "string"}}
+                      }
+                    }
+                  }
+                }
+                """;
+
+        SystemModel model = parse(spec);
+
+        assertNotNull(model);
+        Operation op = model.getOperations().getFirst();
+        JsonNode requestSchema = op.getRequestSchema().get("application/json");
+        assertNotNull(requestSchema, "request schema for application/json is missing");
+
+        // The boolean schema survives untouched.
+        JsonNode items = requestSchema.at("/properties/aspectRatio/items");
+        assertTrue(items.isBoolean(), "items: false must stay a boolean schema");
+        assertFalse(items.asBoolean(), "items must remain false");
+
+        // The sibling $ref still resolves and inlines despite the boolean schema next to it.
+        assertEquals("#/definitions/Tag", requestSchema.at("/properties/tag/$ref").asText());
+        assertEquals("string", requestSchema.at("/definitions/Tag/properties/name/type").asText());
     }
 }
